--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_map">map</string>
     <string name="title_user">user</string>
+    <string name="title_take">take</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
