fix: string.xml app_name ButakaeYak 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">YacTong</string>
+    <string name="app_name">ButakaeYak</string>
     <string name="title_home">Home</string>
     <string name="title_map">map</string>
     <string name="title_user">user</string>
