--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
 
     <string name="autologin">자동 로그인</string>
 
+    <string name="today_medicine">오늘 먹어야 할 약</string>
+    <string name="neighbor">내 지인</string>
+    <string name="my_medicine">복용 중인 약</string>
+
 
     <string name="title_take">take</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
