--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="no_today_guide_title">먹어야 할 약을 아직 지정하지 않으셨습니다!</string>
     <string name="no_today_guide_body">• 알람을 추가하여 복용 중인 약을 관리해보아요!\n• 복용 중인 약마다 최대 5개의 알림을 설정할 수 있어요!</string>
     <string name="no_today_guide_btn">알림 추가하기</string>
+    <string name="no_my_medicine_str">현재 복용 중인 약이 없습니다.</string>
 
 </resources>
