"chore : xml 코드 수정"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,28 @@
 <resources>
     <string name="app_name">ButakaeYak</string>
-
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_map">map</string>
     <string name="title_user">user</string>
+    <string name="title">부탁해약</string>
 
+    <string name="phone_number">전화번호</string>
+    <string name="address">주소</string>
+    <string name="medicine_name">약 이름</string>
+    <string name="cancel">취소</string>
+    <string name="save">저장</string>
+    <string name="check">확인</string>
+    <string name="next">다음</string>
+
+    <!-- FireBase -->
+    <string name="set">set</string>
 
     <!-- SignIn -->
     <string name="input_id">아이디를 입력해 주세요</string>
     <string name="input_pw">비밀번호를 입력해 주세요</string>
     <string name="input_name">이름을 입력해 주세요</string>
     <string name="input_age">나이를 입력해 주세요</string>
+    <string name="input_photo">사진 설정하세요</string>
 
     <string name="btn_login">로그인</string>
     <string name="tv_signup">계정이 없으신가요? 회원가입</string>
@@ -23,7 +34,6 @@
     <string name="neighbor">내 지인</string>
     <string name="my_medicine">복용 중인 약</string>
 
-
     <string name="title_take">take</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_today_guide_title">먹어야 할 약을 아직 지정하지 않으셨습니다!</string>
@@ -31,20 +41,79 @@
     <string name="no_today_guide_btn">알림 추가하기</string>
     <string name="no_my_medicine_str">현재 복용 중인 약이 없습니다.</string>
 
+    <!-- Bottom Sheet -->
+    <string name="place_name">약국 이름</string>
+    <string name="address_name">지번&#160;)&#160;</string>
+    <string name="road_address_name">도로명&#160;)&#160;</string>
+    <string name="place_url_title">링크</string>
+    <string name="place_url">https://www.kakao.com</string>
+    <string name="distance">거리</string>
+    <string name="phone_number_text">010-0000-0000</string>
+    <string name="text">TextView</string>
+
+    <string name="search_filter">증상 혹은 부위를 선택해 주세요</string>
+
+    <!-- Detail Dialog -->
+    <string name="enterprise">업체명</string>
+    <string name="effect">효능/효과</string>
+    <string name="no_content">내용없음</string>
+    <string name="instructions">복용법</string>
+    <string name="warning">주의사항</string>
+    <string name="caution">경고사항</string>
+    <string name="interaction">상호작용</string>
+    <string name="sideEffect">부작용</string>
+    <string name="storingMethod">저장 방법</string>
+
+    <!-- TimePicker Dialog -->
+    <string name="alarm_settings">알림 시간 설정하기</string>
+
+    <!-- Cycle -->
+    <string name="cycle">약 먹는 주기</string>
+    <string name="cycle_alarm_add">알림 추가하기</string>
+
+    <!-- Form -->
+    <string name="form">약 모형</string>
+
+    <!-- Map -->
+    <string name="view_more">목록 더보기</string>
+    <string name="map_research">현 위치에서 재검색</string>
+
+    <!-- Name -->
+    <string name="medicine_name_explanation">복용하는 약 종류\n및 이름을 작성하세요</string>
+    <string name="hint_medicine_name">입력해주세요</string>
+
+    <!-- Search -->
+    <string name="hint_search">검색어를 적어주세요.</string>
+
+    <!-- Take -->
+    <string name="today_date">2024년 9월 3일</string>
+
+    <!-- User -->
+    <string name="my_info">내 정보</string>
+    <string name="my_name">환영합니다 000님</string>
+    <string name="my_login">로그인 설정</string>
+    <string name="my_logout">로그아웃</string>
+    <string name="my_terms">서비스 이용 약관</string>
+    <string name="favorite_pharmacy">즐겨찾기한 약국</string>
+
+    <!-- Item Feed -->
 
     <!-- Terms -->
     <string name="terms_title">서비스 이용 약관</string>
     <string name="terms_title_1">제 1조 목적</string>
     <string name="terms_1">이 약관은 약통 팀 (이하 "개발자")가 운영하는 모바일 애플리케이션인 약통 (이하 "애플리케이션")의 서비스 이용 및 제공에 관한 제반 사항의 규정을 목적으로 합니다.</string>
     <string name="terms_title_2">제 2조 용어의 정의</string>
-    <string name="terms_2">이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n"서비스"라 함은 모바일 기기를 통하여 "이용자"가 이용할 수 있는 "개발자"가 제공하는 제반 서비스를 의미합니다.\n"이용자"란 "애플리케이션"에 접속하여 이 약관에 동의하여 "애플리케이션"이 제공하는 서비스를 이용하는 자를 의미합니다.
+    <string name="terms_2">이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n"서비스"라 함은 모바일 기기를 통하여 "이용자"가 이용할 수 있는 "개발자"가 제공하는 제반 서비스를 의미합니다.
+        \n"이용자"란 "애플리케이션"에 접속하여 이 약관에 동의하여 "애플리케이션"이 제공하는 서비스를 이용하는 자를 의미합니다.
         \n"모바일 기기"란 콘텐츠를 다운로드 받거나 설치하여 사용할 수 있는 기기로서, 휴대폰, 스마트폰, 태블릿 등을 의미합니다.\n애플리케이션"이란 "개발자"가 제공하는 서비스를 이용하기 위해 "모바일 기기"를 통해 다운로드 받거나 설치하여 사용하는 프로그램 일체를 의미합니다.</string>
     <string name="terms_title_3">제 3조 약관의 효력 및 변경</string>
     <string name="terms_3">본 약관은 서비스 이용을 위한 애플리케이션 내에 본 약관을 명시하고, 이용자가 애플리케이션을 설치 및 실행함과 동시에 효력이 발생합니다.
         \n이용자는 본 약관에 동의하지 않으면 서비스를 이용할 수 없으며, 약관 동의 여부는 애플리케이션 내 저장됩니다.
         \n개발자는 불가피한 여건이나 사정이 있을 경우 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」 등 관련 법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
         \n개발자가 약관을 개정할 경우에는 적용일자 및 개정 내용, 개정 사유 등을 명시하여 최소한 그 적용일 7일 이전부터 애플리케이션 내 또는 그 연결 화면에 게시하여 이용자에게 공지합니다.
-        \n개발자가 약관을 개정할 경우 개정 약관 공지 후 개정약관의 적용에 대한 이용자의 동의 여부를 확인합니다. 개발자는 제 3항의 공지 또는 통지를 할 경우 이용자가 개정 약관에 대해 동의 또는 거부의 의사표시를 하지 않으면 동의한 것으로 볼 수 있다는 내용도 함께 공지 또는 통지를 하며, 이용자가 이 약관 시행일 까지 거부의 의사표시를 하지 않는다면 개정약관에 동의한 것으로 볼 수 있습니다. 이용자가 개정 약관에 대해 동의하지 않는 경우 개발자 또는 이용자는 서비스 이용 계약을 해지하고 서비스를 이용하지 않을 수 있습니다.</string>
+        \n개발자가 약관을 개정할 경우 개정 약관 공지 후 개정약관의 적용에 대한 이용자의 동의 여부를 확인합니다. 개발자는 제 3항의 공지 또는 통지를 할 경우 이용자가 개정 약관에 대해 동의 또는 거부의 의사표시를 하지 않으면 동의한 것으로 볼 수 있다는 내용도 함께 공지 또는 통지를 하며
+        , 이용자가 이 약관 시행일 까지 거부의 의사표시를 하지 않는다면 개정약관에 동의한 것으로 볼 수 있습니다.
+        \n이용자가 개정 약관에 대해 동의하지 않는 경우 개발자 또는 이용자는 서비스 이용 계약을 해지하고 서비스를 이용하지 않을 수 있습니다.</string>
     <string name="terms_title_4">제 4조 개인정보 활용 고지</string>
     <string name="terms_4">서비스 이용 과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.
         \n이미지 검색: 검색 형식, 검색한 이미지 데이터, 검색 날짜
