"feat : 비밀번호 작성 시 보이기/숨기기 기능"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
 
     <!-- User -->
     <string name="my_info">내 정보</string>
-    <string name="my_name">환영합니다 000님</string>
+    <string name="my_name">로그인이 필요합니다</string>
     <string name="my_login">로그인 설정</string>
     <string name="my_logout">로그아웃</string>
     <string name="my_terms">서비스 이용 약관</string>
