--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,17 @@
     <string name="input_name">이름을 입력해 주세요</string>
     <string name="input_age">나이를 입력해 주세요</string>
     <string name="input_photo">사진 설정하세요</string>
-
-    <string name="btn_login">로그인</string>
-    <string name="tv_signup">계정이 없으신가요? 회원가입</string>
-    <string name="btn_signup">회원가입</string>
-
+    
     <string name="autologin">자동 로그인</string>
+    <string name="Unsubscribing">회원탈퇴</string>
+    <string name="name">내 이름</string>
+    <string name="login_info">로그인 정보</string>
+    
+    <string name="BreakfastLunchDinner">아침/점심/저녁</string>
+    <string name="Services">서비스 이용 약관</string>
+    <string name="open_API">오픈 소스</string>
+    <string name="version">버전</string>
+    <string name="version_num">2.0</string>
 
     <string name="today_medicine">오늘 먹어야 할 약</string>
     <string name="neighbor">내 지인</string>
