feat : 홈프래그먼트 뷰모델에 들어갈 기능만 정리 fix : 맵 프래그먼트 문구수정, 아이콘 추가 불러온 약국 목록과 즐겨찾기한 약국 출력할 예정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="form">약 모형</string>
 
     <!-- Map -->
-    <string name="view_more">목록 더보기</string>
+    <string name="view_more">더 불러오기</string>
     <string name="map_research">현 위치에서 재검색</string>
 
     <!-- Name -->
