--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="check">확인</string>
     <string name="next">다음</string>
 
+    <string name="btn_call">전화</string>
+    <string name="btn_nav">길찾기</string>
     <!-- FireBase -->
     <string name="set">set</string>
 
