--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="Unsubscribing">회원탈퇴</string>
     <string name="name">내 이름</string>
     <string name="login_info">로그인 정보</string>
+    <string name="if_login">로그인하시겠습니까?</string>
 
     <string name="BreakfastLunchDinner">아침/점심/저녁</string>
     <string name="Services">서비스 이용 약관</string>
