--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,11 @@
     <string name="version">버전</string>
     <string name="version_num">2.0</string>
 
+    <string name="set_time">시간 설정</string>
+    <string name="breakfast">아침</string>
+    <string name="lunch">점심</string>
+    <string name="dinner">저녁</string>
+
     <string name="today_medicine">오늘 먹어야 할 약</string>
     <string name="neighbor">내 지인</string>
     <string name="my_medicine">복용 중인 약</string>
@@ -141,5 +146,11 @@
         \n애플리케이션은 "검색 지원 서비스"로서 서비스 및 정보와 관련하여 직접, 간접, 부수적, 징벌적, 파생적인 손해에 관해서 책임을 지지 않습니다.
         \n개발자는 "구체적인 약의 정보 및 복용"에 대해 애플리케이션 이용 시 이용자에게 "약사에게 확인할 것"을 고지하고 있으며, 이를 이용자가 확인하지 않아 발생한 사고에 대해서는 개발자는 책임을 지지 않습니다.</string>
 
+
+    <!-- Open API -->
+    <string name="api">
+        api 작성하면 됨요
+
+    </string>
 
 </resources>
