fix : homeFragment 약 알림 복용해야 하는 약 기본 2개만 보이기, 열기 닫기 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
 
     <!-- Map -->
     <string name="view_more">더 불러오기</string>
+    <string name="view_close">닫기</string>
     <string name="map_research">현 위치에서 재검색</string>
 
     <!-- Name -->
