--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,5 +164,6 @@
         의약품 제품 허가정보 [https://www.data.go.kr/tcs/dss/selectApiDataDetailView.do?publicDataPk=15095677]
     </string>
     <string name="no_medicine_group">등록된 약이 없습니다!</string>
+    <string name="knock_text">노크하기</string>
 
 </resources>
