--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,5 +166,7 @@
     <string name="no_medicine_group">등록된 약이 없습니다!</string>
     <string name="knock_text">노크하기</string>
     <string name="default_notification_channel_id">fcm_channel</string>
+    <string name="need_login_text">로그인이 필요한 서비스입니다.</string>
+    <string name="no_friend_text">등록된 친구가 없습니다.</string>
 
 </resources>
